frame/support/test/tests/benchmark_ui/bad_return_result_second_item.stderr
error: expected `BenchmarkError`
 --> tests/benchmark_ui/bad_return_result_second_item.rs:8:27
  |
8 |     fn bench() -> Result<(), String> {
  |                              ^^^^^^
